--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   <section class="sectionSeven">
 
     <div class="sectionSeven-leftDiv">
-      <div style ="z-index: 1" class="topPancake pancakeLoop1"><picture><img srcset="../assets-section7/topPancake.webp" alt="webp-pancake"></picture></div>
-      <div class="midPancake pancakeLoop2"><picture><img srcset="../assets-section7/midPancake.webp" alt="webp-pancake"></picture></div>
-      <div class="bottomPancake pancakeLoop3"><picture><img srcset="../assets-section7/bottomPancake.webp" alt="webp-pancake"></picture></div>
+      <div style ="z-index: 1" class="topPancake pancakeLoop1"><picture><img srcset="./resources/assets-section7/topPancake.webp" alt="webp-pancake"></picture></div>
+      <div class="midPancake pancakeLoop2"><picture><img srcset="./resources/assets-section7/midPancake.webp" alt="webp-pancake"></picture></div>
+      <div class="bottomPancake pancakeLoop3"><picture><img srcset="./resources/assets-section7/bottomPancake.webp" alt="webp-pancake"></picture></div>
     </div>
 
      <div class="sectionSeven-centralDiv">
@@ -30,9 +30,9 @@
       </div>
 
     <div class="sectionSeven-rightDiv">
-      <div class="topPancake pancakeLoop4"><picture><img srcset="../assets-section7/topPancake.webp" alt="webp-pancake"></picture></div>
-      <div class="midPancake pancakeLoop5"><picture><img srcset="../assets-section7/midPancake.webp" alt="webp-pancake"></picture></div>
-      <div class="bottomPancake pancakeLoop6"><picture><img srcset="../assets-section7/bottomPancake.webp" alt="webp-pancake"></picture></div>
+      <div class="topPancake pancakeLoop4"><picture><img srcset="./resources/assets-section7/topPancake.webp" alt="webp-pancake"></picture></div>
+      <div class="midPancake pancakeLoop5"><picture><img srcset="./resources/assets-section7/midPancake.webp" alt="webp-pancake"></picture></div>
+      <div class="bottomPancake pancakeLoop6"><picture><img srcset="./resources/assets-section7/bottomPancake.webp" alt="webp-pancake"></picture></div>
     </div>
     
   </section>
@@ -92,6 +92,9 @@
     </div>
 
     <div class="bottomFooter">
+
+      <picture><img src="../resources/logo/pancake_white_logo.svg" alt=""></picture>
+      
       <div class="bottomFooterLeft">
 
         <div class="leftSide">  
