fix:updating data js

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </path>
             </svg>
             <p><b>Prediction</b></p>
-            <h2 id="jackpot-prediction">$120.000</h2>
+            <h2 id="jackpot-prediction"></h2>
             <p><b>in BNB + CAKE won so far</b></p>
             <p>Predict the price trend of BNB or CAKE to win</p>
             <button type="submit">
@@ -127,7 +127,7 @@
               </path>
             </svg>
             <p><b>Lottery</b></p>
-            <h2 id="jackpot-lottery">$120.000</h2>
+            <h2 id="jackpot-lottery"></h2>
             <p><b>in CAKE prizes this round</b></p>
             <p>Buy tickets with CAKE, win CAKE if your numbers match</p>
             <button type="submit">
