--- a/index.html
+++ b/index.html
@@ -96,23 +96,23 @@
           </div>
           <div id="subtitle-res-data-hidden">
             <h6>Stake CAKE - Earn HIGH</h6>
-            <p></p>
-            <p></p>
+            <p>24.993%</p>
+            <p>APR</p>
           </div>
           <div id="subtitle-res-data-hidden">
             <h6>Stake CAKE - Earn OLE</h6>
-            <p></p>
-            <p></p>
+            <p>24.951%</p>
+            <p>APR</p>
           </div>
           <div id="subtitle-res-data-hidden">
             <h6>Stake CAKE - Earn TRIVIA</h6>
-            <p></p>
-            <p></p>
+            <p>24.751%</p>
+            <p>APR</p>
           </div>
           <div id="subtitle-res-data-hidden">
             <h6>Stake CAKE - Earn SDAO</h6>
-            <p></p>
-            <p></p>
+            <p>24.467%</p>
+            <p>APR</p>
           </div>
         </div>
       </div>
