--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet"/>
+  <link rel="stylesheet" href="./css/style.css">
   <title>Document</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
   <section>
     <div class="entire_section">
         <div class="svg_container">
-            <img src="./logo-panckace/svgexport-13.svg" alt="" />
+            <img src="./resources/logo/svgexport-13.svg" alt="" />
         </div>
         <div class="header1">
             <p>Used by millions.</p>
