--- a/index.html
+++ b/index.html
@@ -29,13 +29,12 @@
         </div>
       </div>
       <div class="imgBounce">
-        <figure>
-          <img width="300px" id="main-img" src="https://pancakeswap.finance/images/home/cake/coin@2x.webp" alt="">
-          <img width="180px" id="top-left" src="https://pancakeswap.finance/images/home/cake/top-left@2x.webp" alt="">
-          <img width="180px" id="top-right" src="https://pancakeswap.finance/images/home/cake/top-right@2x.webp" alt="">
-          <img width="180px" id="bottom-right" src="https://pancakeswap.finance/images/home/cake/bottom-right@2x.webp"
-            alt="">
-        </figure>
+
+        <img id="main-img" src="https://pancakeswap.finance/images/home/cake/coin@2x.webp" alt="">
+        <img id="top-left" src="https://pancakeswap.finance/images/home/cake/top-left@2x.webp" alt="">
+        <img id="top-right" src="https://pancakeswap.finance/images/home/cake/top-right@2x.webp" alt="">
+        <img id="bottom-right" src="https://pancakeswap.finance/images/home/cake/bottom-right@2x.webp" alt="">
+
       </div>
     </div>
     <div class="blocco2grid">
