--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -900,10 +900,10 @@
           <img src="../assets/coin1.webp" alt="moneta fluttuante sfocata in lontananza">
         </div>
         <div id="coin2">
-          <img src="assets/coin2.webp" alt="moneta fluttuante gialla con simbolo bitcoin">
+          <img src="../assets/coin2.webp" alt="moneta fluttuante gialla con simbolo bitcoin">
         </div>
         <div id="coin3">
-          <img src="assets/coin3.webp" alt="moneta fluttuante azzurra con sagoma testa coniglietto" >
+          <img src="../assets/coin3.webp" alt="moneta fluttuante azzurra con sagoma testa coniglietto" >
         </div>
     </div>
   </div>
@@ -914,33 +914,33 @@
   <div class = "Section_5">
     <div class="magic-cards">
       <div id="m-c-1">
-        <img src="assets/bottom-left@2x.webp" alt="moneta fluttuante sfocata in lontananza">
+        <img src="../assets/bottom-left@2x.webp" alt="moneta fluttuante sfocata in lontananza">
       </div>
       <div id="m-c-2">
-        <img src="assets/green@2x.webp" alt="moneta fluttuante gialla con simbolo bitcoin">
+        <img src="../assets/green@2x.webp" alt="moneta fluttuante gialla con simbolo bitcoin">
       </div>
       <div id="m-c-3">
-        <img src="assets/red@2x.webp" alt="moneta fluttuante azzurra con sagoma testa coniglietto" >
+        <img src="../assets/red@2x.webp" alt="moneta fluttuante azzurra con sagoma testa coniglietto" >
       </div>
       <div id="m-c-4">
-        <img src="assets/top-right@2x.webp" alt="moneta fluttuante azzurra con sagoma testa coniglietto" >
+        <img src="../assets/top-right@2x.webp" alt="moneta fluttuante azzurra con sagoma testa coniglietto" >
       </div>
     </div>
     <div class="biliard-balls">
       <div id="b-b-1">
-        <img src="assets/2@2x.webp" alt="moneta fluttuante sfocata in lontananza">
+        <img src="../assets/2@2x.webp" alt="moneta fluttuante sfocata in lontananza">
       </div>
       <div id="b-b-2">
-        <img src="assets/4@2x.webp" alt="moneta fluttuante gialla con simbolo bitcoin">
+        <img src="../assets/4@2x.webp" alt="moneta fluttuante gialla con simbolo bitcoin">
       </div>
       <div id="b-b-3">
-        <img src="assets/6@2x.webp" alt="moneta fluttuante azzurra con sagoma testa coniglietto" >
+        <img src="../assets/6@2x.webp" alt="moneta fluttuante azzurra con sagoma testa coniglietto" >
       </div>
       <div id="b-b-4">
-        <img src="assets/7@2x.webp" alt="moneta fluttuante azzurra con sagoma testa coniglietto" >
+        <img src="../assets/7@2x.webp" alt="moneta fluttuante azzurra con sagoma testa coniglietto" >
       </div>
       <div id="b-b-5">
-        <img src="assets/9@2x.webp" alt="moneta fluttuante azzurra con sagoma testa coniglietto" >
+        <img src="../assets/9@2x.webp" alt="moneta fluttuante azzurra con sagoma testa coniglietto" >
       </div>
     </div>
     <div class = "container_5">
