--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -14,6 +14,7 @@
     <script defer src="./CakePrice.mjs" type="module"></script>
     <script src="script.js" defer></script>
     <script src="section_3-5.js" defer></script>
+    <script src="section-6.js" defer></script>
   </head>
   <body>
     <!-- Sezione 1 - Riccardo -->
@@ -809,7 +810,7 @@
   <section>
     <div class="entire_section">
         <div class="svg_container">
-            <img src="./resources/logo/svgexport-13.svg" alt="" />
+            <img src="../resources/logo/svgexport-13.svg" alt="" />
         </div>
         <div class="header1">
             <p>Used by millions.</p>
@@ -1134,6 +1135,63 @@
     </div>
   </div>
 <!--------------------------------------------------------------------- fine sezione 5-->
+ <!-- Alessio start -->
+ <div class="sezione6-wrapper">
+   <div class="sezione6">
+    <div class="blocco1flex">
+      <div class="textblocco1">
+        <h2><span>CAKE</span> makes our world go round.</h2>
+        <div class="paragrafo">
+          CAKE token is at the heart of the PancakeSwap ecosystem. Buy it, win it, farm it, spend it, stake it... heck,
+          you can even vote with it!
+        </div>
+        <div class="bottone-learn">
+          <button>
+            <p>Buy Cake</p>
+          </button>
+          <a id="learn" href="">Learn</a>
+        </div>
+      </div>
+      <div class="imgBounce">
+  
+       <picture>
+          <img id="main-img" src="https://pancakeswap.finance/images/home/cake/coin@2x.webp" alt="">
+          <img id="top-left" src="https://pancakeswap.finance/images/home/cake/top-left@2x.webp" alt="">
+          <img id="top-right" src="https://pancakeswap.finance/images/home/cake/top-right@2x.webp" alt="">
+          <img id="bottom-right" src="https://pancakeswap.finance/images/home/cake/bottom-right@2x.webp" alt="">
+  
+       </picture>
+      </div>
+    </div>
+    <div class="blocco2grid">
+      <div class="quadro1">
+        <h5>Circulating Supply</h5>
+        <p id="circulating_supply">145,497,767</p>
+      </div>
+      <div class="quadro2">
+        <h5> Total supply</h5>
+        <p id="total_supply">312,743,776</p>
+      </div>
+      <div class="quadro3">
+        <h5> Max Supply</h5>
+        <p>750,000,000</p>
+      </div>
+      <div class="quadro4">
+        <h5>Market cap</h5>
+        <p id="market_cap">$450 million</p>
+      </div>
+      <div class="quadro5">
+        <h5>Burned to date</h5>
+        <p>515,797,943</p>
+      </div>
+      <div class="quadro6">
+        <h5>Current emissions</h5>
+        <p>13.75/block</p>
+      </div>
+    </div>
+  </div>
+ </div>
+<!-- End Alessio -->
   </body>
 </html>
 
