feat: added second wallet button js

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -653,7 +653,7 @@
                 platform in the galaxy.
               </h2>
               <div class="main-section-hero-connect">
-                <button>Connect Wallet</button>
+                <button class="connect-wallet">Connect Wallet</button>
                 <a href="/swap"><button>Trade Now</button></a>
               </div>
             </div>
