feat: added footer  wallet button js

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -1207,7 +1207,7 @@
         <div><h2>Start in seconds.</h2></div>
         <div><p>Connect your crypto wallet to start using the app in seconds.<br><span>No registration needed.</span></p></div>
         <div><a href="#">Learn how to start</a></div>
-        <div><button><a href="#">Connect Wallet</a></button></div>
+        <div><button class="connect-wallet"><a href="#">Connect Wallet</a></button></div>
       </div>
 
     <div class="sectionSeven-rightDiv">
