added font family for all

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -1046,7 +1046,7 @@
           </path>
           </svg>
           <p><b>Prediction</b></p>
-          <h2 id="jackpot-prediction">$220 billion</h2>
+          <h2 id="jackpot-prediction">$780 million</h2>
           <p><b>in BNB + CAKE won so far</b></p>
           <p>Predict the price trend of BNB or CAKE to win</p>
           <button type="submit">
