feat: add animation to hero

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -588,7 +588,16 @@
 
       <main>
         <section class="main-section-hero">
-          <div class="hero-timer">
+          <div class="hero-timer" id="timer-1">
+            <p id="hero-perpetual">Perpetual Futures</p>
+            <h2 id="hero-leva">Up to 100x Leverage</h2>
+            <a href="#"><button>Trade Now</button></a>
+            <div class="hero-timer-img">
+                <img id="perpetual1"src="../assets-section1/perpetual.webp" alt="">
+                <img id="perpetual2" src="../assets-section1/perpetualMobile.webp" alt="">
+            </div>
+        </div>
+          <div class="hero-timer" id="timer-2">
             <h2 class="lotteryamount"></h2>
             <div class="hero-timer-inner">
               <div>
