--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -140,24 +140,23 @@
                   <div
                     class="nav-left-inner-links-outer-block-link-dropdown-link"
                   >
-                    <a href="/swap">Swap</a>
+                    <a href="">Swap</a>
                   </div>
                   <div
                     class="nav-left-inner-links-outer-block-link-dropdown-link"
                   >
-                    <a href="/limit-orders">Limit</a>
+                    <a href="">Limit</a>
                   </div>
                   <div
                     class="nav-left-inner-links-outer-block-link-dropdown-link"
                   >
-                    <a href="/liquidity">Liquidity</a>
+                    <a href="">Liquidity</a>
                   </div>
                   <div
                     class="nav-left-inner-links-outer-block-link-dropdown-link"
                   >
                     <a
-                      href="https://perp.pancakeswap.finance/en/futures/BTCUSDT?theme=dark"
-                      target="_blank"
+                      href=""
                     >
                       <div class="hkEazT eeauGl">
                         Perpetual
@@ -179,7 +178,7 @@
               <div class="nav-left-inner-links-outer-block">
                 <div class="nav-left-inner-links-outer-block-div">
                   <div class="nav-left-inner-links-outer-block-link">
-                    <a href="/farms">Earn</a>
+                    <a href="">Earn</a>
                   </div>
                 </div>
                 <div
@@ -193,12 +192,12 @@
                   <div
                     class="nav-left-inner-links-outer-block-link-dropdown-link"
                   >
-                    <a class=" " href="/farms">Farms</a>
+                    <a class=" " href="">Farms</a>
                   </div>
                   <div
                     class="nav-left-inner-links-outer-block-link-dropdown-link"
                   >
-                    <a class=" " href="/pools">Pools</a>
+                    <a class=" " href="">Pools</a>
                   </div>
                 </div>
               </div>
@@ -206,7 +205,7 @@
               <div class="nav-left-inner-links-outer-block">
                 <div class="nav-left-inner-links-outer-block-div">
                   <div class="nav-left-inner-links-outer-block-link">
-                    <a href="/prediction">Win</a>
+                    <a href="">Win</a>
                   </div>
                 </div>
                 <div
@@ -220,17 +219,17 @@
                   <div
                     class="nav-left-inner-links-outer-block-link-dropdown-link"
                   >
-                    <a class=" " href="/competition">Trading Competition</a>
+                    <a class=" " href="">Trading Competition</a>
                   </div>
                   <div
                     class="nav-left-inner-links-outer-block-link-dropdown-link"
                   >
-                    <a class=" " href="/prediction">Prediction (BETA)</a>
+                    <a class=" " href="">Prediction (BETA)</a>
                   </div>
                   <div
                     class="nav-left-inner-links-outer-block-link-dropdown-link"
                   >
-                    <a href="/lottery">Lottery</a>
+                    <a href="">Lottery</a>
                   </div>
                 </div>
               </div>
@@ -238,7 +237,7 @@
               <div class="nav-left-inner-links-outer-block">
                 <div class="nav-left-inner-links-outer-block-div">
                   <div class="nav-left-inner-links-outer-block-link">
-                    <a class="epXtJr" href="/nfts">NFT</a>
+                    <a class="epXtJr" href="">NFT</a>
                   </div>
                 </div>
                 <div
@@ -252,17 +251,17 @@
                   <div
                     class="nav-left-inner-links-outer-block-link-dropdown-link"
                   >
-                    <a class=" " href="/nfts">Overview</a>
+                    <a class=" " href="">Overview</a>
                   </div>
                   <div
                     class="nav-left-inner-links-outer-block-link-dropdown-link"
                   >
-                    <a class=" " href="/nfts/collections">Collections</a>
+                    <a class=" " href="">Collections</a>
                   </div>
                   <div
                     class="nav-left-inner-links-outer-block-link-dropdown-link"
                   >
-                    <a class=" " href="/nfts/activity">Activity</a>
+                    <a class=" " href="">Activity</a>
                   </div>
                 </div>
               </div>
@@ -270,12 +269,13 @@
               <div class="nav-left-inner-links-outer-block">
                 <div class="nav-left-inner-links-outer-block-div">
                   <div class="nav-left-inner-links-outer-block-link">
-                    <a href="/info"
+                    <a href="#"
                       ><svg
                         class="bWSJtj"
                         viewbox="0 0 24 24"
                         width="20px"
                         xmlns="http://www.w3.org/2000/svg"
+                        fill="rgb(184, 173, 210)"
                       >
                         <path
                           d="M6 10C4.9 10 4 10.9 4 12C4 13.1 4.9 14 6 14C7.1 14 8 13.1 8 12C8 10.9 7.1 10 6 10ZM18 10C16.9 10 16 10.9 16 12C16 13.1 16.9 14 18 14C19.1 14 20 13.1 20 12C20 10.9 19.1 10 18 10ZM12 10C10.9 10 10 10.9 10 12C10 13.1 10.9 14 12 14C13.1 14 14 13.1 14 12C14 10.9 13.1 10 12 10Z"
@@ -294,17 +294,17 @@
                   <div
                     class="nav-left-inner-links-outer-block-link-dropdown-link"
                   >
-                    <a class=" " href="/info">Info</a>
+                    <a class=" " href="">Info</a>
                   </div>
                   <div
                     class="nav-left-inner-links-outer-block-link-dropdown-link"
                   >
-                    <a class=" " href="/ifo">IFO</a>
+                    <a class=" " href="">IFO</a>
                   </div>
                   <div
                     class="nav-left-inner-links-outer-block-link-dropdown-link"
                   >
-                    <a class=" " href="/voting">Voting</a>
+                    <a class=" " href="">Voting</a>
                   </div>
                   <div
                     class="nav-left-inner-links-outer-block-link-dropdown-link"
@@ -348,7 +348,7 @@
                   >
                     <a
                       class=""
-                      href="https://docs.pancakeswap.finance"
+                      href=""
                       target="_blank"
                     >
                       <div class="hkEazT eeauGl">
@@ -373,7 +373,6 @@
           <div class="nav-right">
             <div class="nav-right-icon">
               <a
-                href="https://pancakeswap.finance/swap?outputCurrency=0x0e09fabb73bd3ade0a17ecc321fd13a19e81ce82"
                 target="_blank"
                 ><img src="../resources/svg/logoPancake.svg" alt="pancake-logo">
                 <div class="nav-right-icon-price"></div></a
@@ -604,7 +603,7 @@
                 <p id="countdown"></p>
               </div>
             </div>
-            <a href="https://pancakeswap.finance/lottery"
+            <a
               ><button id="play-button">Play Now</button></a
             >
             <div class="hero-timer-img">
@@ -621,7 +620,7 @@
               </h2>
               <div class="main-section-hero-connect">
                 <button class="connect-wallet">Connect Wallet</button>
-                <a href="/swap"><button>Trade Now</button></a>
+                <a href=""><button>Trade Now</button></a>
               </div>
             </div>
             <aside>
