Add gradients between sections

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -118,8 +118,7 @@
                     class="eye"
                     d="M74.85 117.896c0 9.718-4.546 14.779-10.154 14.779s-10.154-5.061-10.154-14.779 4.546-14.779 10.154-14.779 10.154 5.061 10.154 14.779zM140.851 117.896c0 9.718-4.546 14.779-10.154 14.779s-10.154-5.061-10.154-14.779 4.546-14.779 10.154-14.779 10.154 5.061 10.154 14.779z"
                     fill="#633001"
-                  ></path></svg
-              ></a>
+                  ></path></svg></a>
             </div>
 
             <div class="nav-left-inner-links">
@@ -279,8 +278,7 @@
                       >
                         <path
                           d="M6 10C4.9 10 4 10.9 4 12C4 13.1 4.9 14 6 14C7.1 14 8 13.1 8 12C8 10.9 7.1 10 6 10ZM18 10C16.9 10 16 10.9 16 12C16 13.1 16.9 14 18 14C19.1 14 20 13.1 20 12C20 10.9 19.1 10 18 10ZM12 10C10.9 10 10 10.9 10 12C10 13.1 10.9 14 12 14C13.1 14 14 13.1 14 12C14 10.9 13.1 10 12 10Z"
-                        ></path></svg
-                    ></a>
+                        ></path></svg></a>
                   </div>
                 </div>
                 <div
@@ -586,7 +584,7 @@
         </nav>
       </header>
 
-      <main>
+      <main style="position: relative;">
         <section class="main-section-hero">
           <div class="hero-timer">
             <h2 class="lotteryamount"></h2>
@@ -766,7 +764,9 @@
       </button>
     </section>
      <!-- Inizio sezione 2 Giuseppe-->
-  <section>
+  <section style="position: relative;">
+    <svg id="waveBG" style="position: absolute; bottom: 99% ; width: 100vw" viewBox="0 0 1660 339" width="100%" color="text" xmlns="http://www.w3.org/2000/svg" class="sc-8a800401-0 Mvnec"><path d="M804 166.523C520.5 166.523 267.5 290.022 0 304V338.5H1660V0C1358.83 0 1104 166.523 804 166.523Z" fill="url(#paint0_linear_dark)"></path><defs><linearGradient id="paint0_linear_dark" x1="830" y1="83.5" x2="830" y2="338.5" gradientUnits="userSpaceOnUse"><stop stop-color="#08060B" stop-opacity="0.2"></stop><stop offset="0.545554" stop-color="#08060B" stop-opacity="0.5"></stop><stop offset="1" stop-color="#08060B"></stop></linearGradient></defs></svg>
+
     <div class="entire_section">
         <div class="svg_container">
             <img src="../resources/logo/svgexport-13.svg" alt="" />
@@ -845,6 +845,7 @@
     </div>
 </section>
 <!-- Fine sezione 2 Giuseppe-->
+<div id="gradient-section2-3"></div>
 <!------------------------------------------------------------------------ inizio  Sezione 3  ----------------------------------------------------------------------------->
 <div class = "Section_3">
   <div class = "Image-Text_3">
@@ -870,7 +871,8 @@
   </div>
 </div>
 <!------------------------------------------------------------------------ Fine Sezione 3  ----------------------------------------------------------------------------->
- <!--Sezione4 -->
+<div id="gradient-section3-4"></div> 
+<!--Sezione4 -->
  <div class="sectionSix">
   <!-- section Fabio -->
   <div class="super-criminal">
