minor fix: section 6 doesnt invade section 7 anymore, footer bottom white line removed

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -1312,7 +1312,7 @@
     </div>
   </div>
   </footer>
-  <div class="space"></div>
+  <!-- <div class="space"></div> -->
   <!-- fine footer -->
   </body>
 </html>
